--- a/api/package.json
+++ b/api/package.json
@@ -6,20 +6,25 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "node_modules/.bin/tsc",
+    "build": "rimraf ./dist && node_modules/.bin/tsc --skipLibCheck",
     "start": "node ./dist/main.js",
     "compliance-report": "npm run compliance-setup && npm run compliance-infosec-audit",
     "compliance-setup": "rimraf .compliance-reports && mkdir .compliance-reports",
     "compliance-infosec-audit": "npm audit >> .compliance-reports/node-modules-audit.md"
   },
   "devDependencies": {
-    "@types/hapi": "18.0.3",
     "@types/node": "12.12.18",
     "eslint": "6.7.2",
     "prettier": "1.19.1",
     "typescript": "3.7.3"
   },
   "dependencies": {
-    "@hapi/hapi": "18.4.0"
+    "apollo-server": "^2.9.14",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.5.8",
+    "graphql-yoga": "^1.18.3",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.5"
   }
 }
