--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "12.12.18",
+    "@types/uuid": "^3.4.6",
     "eslint": "6.7.2",
     "prettier": "1.19.1",
     "typescript": "3.7.3"
@@ -25,6 +26,7 @@
     "graphql": "^14.5.8",
     "graphql-yoga": "^1.18.3",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.5"
+    "type-graphql": "^0.17.5",
+    "uuid": "^3.3.3"
   }
 }
