--- a/api/package.json
+++ b/api/package.json
@@ -14,19 +14,19 @@
   },
   "devDependencies": {
     "@types/node": "12.12.18",
-    "@types/uuid": "^3.4.6",
+    "@types/uuid": "3.4.6",
     "eslint": "6.7.2",
     "prettier": "1.19.1",
     "typescript": "3.7.3"
   },
   "dependencies": {
-    "apollo-server": "^2.9.14",
-    "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8",
-    "graphql-yoga": "^1.18.3",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.5",
-    "uuid": "^3.3.3"
+    "apollo-server": "2.9.14",
+    "express": "4.17.1",
+    "express-graphql": "0.9.0",
+    "graphql": "14.5.8",
+    "graphql-yoga": "1.18.3",
+    "reflect-metadata": "0.1.13",
+    "type-graphql": "0.17.5",
+    "uuid": "3.3.3"
   }
 }
