--- a/sandbox-ui/.gitignore
+++ b/sandbox-ui/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+.npmrc
 /.pnp
 .pnp.js
 
@@ -10,9 +11,11 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
