--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -18,7 +18,10 @@
     "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
+    "react-ace-editor": "^0.0.3",
     "react-dom": "^16.12.0",
+    "react-monaco-editor": "^0.32.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
