--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sandbox-ui",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -31,7 +31,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn build:app && yarn build:docker",
+    "build:app": "react-scripts build",
+    "build:docker": "docker build -t mode-sandbox-ui .",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
