--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "ace-builds": "^1.4.7",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
+    "brace": "^0.11.1",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
