--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -35,7 +35,9 @@
     "start": "react-scripts start",
     "build": "yarn build:app && yarn build:docker",
     "build:app": "react-scripts build",
-    "build:docker": "docker build -t mode-sandbox-ui .",
+    "build:docker": "yarn build:docker:build && yarn build:docker:push",
+    "build:docker:build": "docker build -t fyuld/modelab-sandbox-ui .",
+    "build:docker:push": "docker push fyuld/modelab-sandbox-ui",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
