--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -29,7 +29,7 @@
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2",
-    "uuid": "^3.3.3"
+    "uuidv4": "^6.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,7 +63,6 @@
     "@storybook/addon-knobs": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.6",
     "awesome-typescript-loader": "^5.2.1",
