--- a/mode-lab-playground-sdk/.prettierrc.json
+++ b/mode-lab-playground-sdk/.prettierrc.json
@@ -3,5 +3,7 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"semi": false,
-	"trailingComma": "es5"
+	"trailingComma": "es5",
+	"quoteProps": "consistent",
+	"arrowParens": "always"
 }
