--- a/mode-lab-playground-sdk/package.json
+++ b/mode-lab-playground-sdk/package.json
@@ -11,18 +11,17 @@
 		"test": "jest"
 	},
 	"devDependencies": {
-		"@types/jest": "^25.1.3",
-		"@types/node": "^13.7.7"
-	},
-	"dependencies": {
-		"dotenv": "8.2.0",
+		"@types/jest": "25.1.4",
+		"@types/node": "^13.9.1",
 		"eslint": "6.8.0",
 		"jest": "25.1.0",
 		"jest-cucumber": "2.0.11",
-		"moxios": "0.4.0",
 		"prettier": "1.19.1",
 		"ts-jest": "25.2.1",
-		"typescript": "3.8.3",
-		"uuidv4": "^6.0.5"
+		"typescript": "3.8.3"
+	},
+	"dependencies": {
+		"date-fns": "2.11.0",
+		"uuidv4": "6.0.5"
 	}
 }
